# datakit

./: .dockerignore  .gitattributes  .gitignore  .merlin  .ocamlformat  .travis.yml  9p.md  CHANGES  CHANGES.md  Datakit_S.CLIENT.Branch.html  Datakit_S.CLIENT.Commit.html  Datakit_S.CLIENT.GitHub.PR.html  Datakit_S.CLIENT.GitHub.Status.html  Datakit_S.CLIENT.GitHub.html  Datakit_S.CLIENT.Transaction.html  Datakit_S.CLIENT.Tree.html  Datakit_S.CLIENT.html  Datakit_S.READABLE_TREE.html  Datakit_S.html  Datakit_ci.ACL.html  Datakit_ci.BUILDER.Key.html  Datakit_ci.BUILDER.html  Datakit_ci.Cache.Make.html  Datakit_ci.Cache.Path.html  Datakit_ci.Cache.html  Datakit_ci.Config.html  Datakit_ci.DK.html  Datakit_ci.Docker.Image.html  Datakit_ci.Docker.html  Datakit_ci.Git.html  Datakit_ci.Job.Infix.html  Datakit_ci.Job.html  Datakit_ci.Live_log.html  Datakit_ci.Monitored_pool.html  Datakit_ci.Output.html  Datakit_ci.Private.Client9p.html  Datakit_ci.Private.html  Datakit_ci.Process.html  Datakit_ci.Target.html  Datakit_ci.Term.Infix.html  (+229 more)
.circleci/: config.yml
api/: ocaml
api/c#/: .gitignore  Datakit.nuspec  Datakit.sln  README.md  Sharp9P.nuspec  build.fsx  paket.dependencies
api/go/: client_test.go  config.go  transaction.go  watch.go
api/go-datakit/: client.go  client_test.go  config.go  config_test.go  dial_test.go  dial_windows_test.go  snapshot.go  snapshot_test.go  transaction.go  transaction_test.go
api/ocaml/: datakit_S.ml  datakit_client.ml  datakit_client.mli  datakit_client_9p.ml  datakit_client_9p.mli  datakit_path.mli  dune  jbuild
bridge/github/: README.md  _tags  datakit-github-client.mllib  datakit-github-server.mllib  datakit-github.mllib  datakit_github.ml  datakit_github.mli  datakit_github_api.ml  datakit_github_api.mli  datakit_github_conv.ml  datakit_github_conv.mli  datakit_github_state.ml  datakit_github_state.mli  datakit_github_sync.ml  datakit_github_sync.mli  datakit_github_vfs.ml  datakit_github_vfs.mli  dune  jbuild  main.ml
bridge/github/src/: datakit-github.mllib  datakit_github.ml  datakit_github.mli  datakit_github_api.ml  datakit_github_api.mli  datakit_github_vfs.ml  datakit_github_vfs.mli  datakit_github_webhook.ml  datakit_github_webhook.mli
bridge/github/webhook/: serve.go
bridge/github/webhook/server/: event.go  server.go  utils.go
bridge/local/: Makefile  README.md  _tags  datakit-bridge-local-git.mllib  dune  jbuild  main.ml  sync.ml  sync.mli
ci/: .merlin  Dockerfile  Makefile  README.md  _tags  build.sh  ci.sh  map.sh  push.sh
ci/self-ci/: .dockerignore  .gitignore  Dockerfile  Dockerfile.run  Makefile  README.md  _tags  datakit-ci.yml  docker-compose.yml  selfCI.ml  update-certs.sh
ci/skeleton/: .dockerignore  Dockerfile  Makefile  _tags  (+1 more)
ci/src/: .dune.swp  cI_ACL.ml  cI_ACL.mli  cI_cache.ml  cI_cache.mli  cI_char_stream.ml  cI_char_stream.mli  cI_config.ml  cI_config.mli  cI_docker.ml  cI_docker.mli  cI_engine.ml  cI_engine.mli  cI_escape_parser.ml  cI_escape_parser.mli  cI_eval.ml  cI_eval.mli  cI_form.ml  cI_form.mli  cI_git.ml  cI_git.mli  cI_github_hooks.ml  cI_github_hooks.mli  cI_history.ml  cI_history.mli  cI_live_log.ml  cI_live_log.mli  cI_log_reporter.ml  cI_log_reporter.mli  cI_main.ml  cI_main.mli  cI_monitored_pool.ml  cI_monitored_pool.mli  cI_output.ml  cI_output.mli  cI_process.ml  cI_process.mli  cI_projectID.ml  cI_projectID.mli  cI_prometheus.ml  (+33 more)
datakit/: datakit.odoc  datakit__.odoc  datakit__Blob.odoc  datakit__Branch.odoc  datakit__Dir.odoc  datakit__Merge.odoc  datakit__Metadata.odoc  datakit__Path.odoc  datakit__Remote.odoc  datakit__Store.odoc  index-generated.mld  index.html  page-index.odoc
datakit-bridge-github/: index.html
datakit-bridge-local-git/: index.html
datakit-ci/: cI_ACL.odoc  cI_cache.odoc  cI_char_stream.odoc  cI_config.odoc  cI_docker.odoc  cI_engine.odoc  cI_escape_parser.odoc  cI_eval.odoc  cI_form.odoc  cI_git.odoc  cI_history.odoc  cI_live_log.odoc  cI_log_reporter.odoc  cI_main.odoc  cI_monitored_pool.odoc  cI_output.odoc  cI_process.odoc  cI_result.odoc  cI_s.odoc  cI_secrets.odoc  cI_static.odoc  cI_target.odoc  cI_term.odoc  cI_utils.odoc  cI_web.odoc  cI_web_templates.odoc  cI_web_utils.odoc  datakit_ci.odoc  index-generated.mld  index.html  page-index.odoc
datakit-client/: datakit_client.odoc  index-generated.mld  index.html  page-index.odoc
datakit-client-9p/: datakit_client_9p.odoc  index-generated.mld  index.html  page-index.odoc
datakit-client-git/: datakit_client_git.odoc  index-generated.mld  index.html  page-index.odoc
datakit-github/: datakit_github.odoc  datakit_github_conv.odoc  index-generated.mld  index.html  page-index.odoc
datakit-server/: index-generated.mld  index.html  page-index.odoc  vfs.odoc
datakit-server-9p/: fs9p.odoc  fs9p_error.odoc  index-generated.mld  index.html  page-index.odoc
datakit_bridge_github@datakit/: datakit_github_api.odoc  datakit_github_state.odoc  datakit_github_sync.odoc  index-generated.mld  index.html  page-index.odoc
datakit_conduit@datakit/: datakit_conduit.odoc  index-generated.mld  index.html  page-index.odoc
datakit_io@datakit/: datakit_io.odoc  index-generated.mld  index.html  page-index.odoc
datakit_log@datakit/: datakit_log.odoc  index-generated.mld  index.html  page-index.odoc
db/: Dockerfile  Makefile
doc/: api.odocl
docs/: dkt.md
pkg/: META  META.bridge-local-git  META.ci  META.client  META.github  META.prometheus  META.prometheus-app  META.server  pkg.ml
prometheus/: Makefile  _tags
reports/: 2017-04-23.md  2017-04-30.md  2017-05-07.md  2017-05-14.md  2017-05-28.md  2017-06-04.md
scripts/: check-dylib.sh  git-dumb-server  start-client.sh  start-datakit-gh-bridge.sh  start-datakit.sh  test-pr.sh  watermark.sh
sdk/: .merlin  Dockerfile  Makefile
src/: _tags  datakit_conduit.ml  datakit_conduit.mli  datakit_io.ml  datakit_io.mli  datakit_log.ml  datakit_log.mli
static/: Dockerfile  Makefile
test@datakit/: index-generated.mld  index.html  page-index.odoc  test_client.odoc  test_utils.odoc
tests/: test.ml  test_client.ml  test_github.ml  test_utils.ml
www/: style.css
(+697 files in other folders)
