opam-version: "1.2"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Leonard" "Magnus Skjegstad"
               "David Scott" "Thomas Gazagnaire"]
license:      "Apache"
homepage:     "https://github.com/moby/datakit"
bug-reports:  "https://github.com/moby/datakit/issues"
dev-repo:     "https://github.com/moby/datakit.git"
doc:          "https://docker.github.io/datakit/"

build: ["jbuilder" "build" "-p" name "-j" jobs]
build-test: ["jbuilder" "runtest" "tests/%{name}%"]

depends: [
  "jbuilder" {build & >= "1.0+beta10"}
  "cmdliner"
  "lwt" {>= "3.0.0"}
  "datakit-github"    {>= "0.11.0"}
  "datakit-client-9p" {>= "0.11.0"}
  "datakit-client-git"
  "logs" "fmt"
  "mtime" {>= "1.0.0"}
  "asl" "win-eventlog"
  "uri" {>= "1.8.0"}
  "hvsock" {>= "0.8.1"}
  "hex" "nocrypto" "conduit"
  "prometheus-app"
  "protocol-9p-unix" {>= "0.11.0"}
  "datakit-client" {>= "0.10.0"}
  "github-hooks-unix" {>= "0.2.0"}
  "github" {>= "2.1.0"}
  "alcotest" {test & >= "0.8.0"}
  "datakit"  {test & >= "0.11.0"}
]
