opam-version: "2.0"
maintainer: "thomas.leonard@docker.com"
authors: "Thomas Leonard"
license: "Apache"
homepage: "https://github.com/moby/datakit"
doc: "https://docker.github.io/datakit/"
bug-reports: "https://github.com/moby/datakit/issues"
depends: [
  "ocaml"
  "jbuilder" {build & >= "1.0+beta10"}
  "cmdliner"
  "irmin-watcher"
  "irmin" {>= "1.2.0"}
  "irmin-unix" {>= "1.2.0"}
  "lwt" {>= "3.0.0"}
  "logs"
  "fmt"
  "protocol-9p-unix" {>= "0.11.0"}
  "datakit-client" {>= "0.12.0"}
  "datakit-client-9p" {>= "0.12.0"}
  "datakit-github" {>= "0.12.0"}
]
build: ["jbuilder" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/moby/datakit.git"
