opam-version: "1.2"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas© Leonard" "Anil Madhavapeddy"
               "Dave Tucker" "Thomas Gazagnaire" ]
license:      "Apache"
homepage:     "https://github.com/moby/datakit"
bug-reports:  "https://github.com/moby/datakit/issues"
dev-repo:     "https://github.com/moby/datakit.git"
doc:          "https://docker.github.io/datakit/"

build: ["jbuilder" "build" "-p" name "-j" jobs]
build-test: ["jbuilder" "runtest" "ci/tests"]

depends: [
  "jbuilder" {build & >= "1.0+beta10"}
  "multipart-form-data"
  "datakit-client" {>= "0.12.0"}
  "datakit-client-9p" {>= "0.12.0"}
  "datakit-github" {>= "0.12.0"}
  "protocol-9p-unix" {>= "0.11.0"}
  "astring"
  "cmdliner"
  "fmt"
  "logs"
  "tyxml" {>= "4.0.0"}
  "tls" {>= "0.9.0"}
  "conduit-lwt-unix" {>= "1.0.0"}
  "io-page"
  "pbkdf"
  "webmachine" {>= "0.4.0"}
  "session-redis-lwt" {>= "0.4.0"}
  "session-webmachine" {>= "0.4.0"}
  "redis-lwt"
  "asetmap"
  "github-unix" {>= "3.0.0"}
  "prometheus-app"
  "lwt" {>= "3.0.0"}
  "ppx_sexp_conv" {build}
  "crunch" {build}
  "datakit" {test & >= "0.12.0"}
  "irmin-unix" {test & >= "1.2.0"}
  "alcotest" {test}
  "cohttp-lwt-unix" {>= "1.0.0"}
]
available: [ocaml-version >= "4.03.0"]
