opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: [
  "Thomas© Leonard" "Anil Madhavapeddy" "Dave Tucker" "Thomas Gazagnaire"
]
license: "Apache"
homepage: "https://github.com/moby/datakit"
doc: "https://docker.github.io/datakit/"
bug-reports: "https://github.com/moby/datakit/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "multipart-form-data"
  "datakit-client" {>= "0.12.0"}
  "datakit-client-9p" {>= "0.12.0"}
  "datakit-github" {>= "0.12.0"}
  "protocol-9p-unix" {>= "0.11.0"}
  "astring"
  "cmdliner"
  "fmt"
  "logs"
  "tyxml" {>= "4.0.0"}
  "tls" {>= "0.9.0"}
  "conduit-lwt-unix" {>= "1.0.0"}
  "io-page"
  "pbkdf"
  "webmachine" {>= "0.4.0"}
  "session-redis-lwt" {>= "0.4.0"}
  "session-webmachine" {>= "0.4.0"}
  "redis-lwt"
  "asetmap"
  "github-unix" {>= "3.0.0"}
  "prometheus-app"
  "lwt" {>= "3.0.0"}
  "ppx_sexp_conv" {build}
  "crunch" {build}
  "datakit" {with-test & >= "0.12.0"}
  "irmin-unix" {with-test & >= "1.2.0"}
  "alcotest" {with-test}
  "cohttp-lwt-unix" {>= "1.0.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "ci/tests"] {with-test}
]
dev-repo: "git+https://github.com/moby/datakit.git"
synopsis: "Continuous Integration service using DataKit"
description: """
DataKitCI is a continuous integration service that monitors your
GitHub project and tests each branch, tag and pull request. It
displays the test results as status indicators in the GitHub UI. It
keeps all of its state and logs in DataKit, rather than a traditional
relational database, allowing review with the usual Git tools.
"""
