opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: [
  "Thomas Leonard" "Magnus Skjegstad" "David Scott" "Thomas Gazagnaire"
]
license: "Apache"
homepage: "https://github.com/moby/datakit"
doc: "https://docker.github.io/datakit/"
bug-reports: "https://github.com/moby/datakit/issues"
depends: [
  "ocaml"
  "jbuilder" {build & >= "1.0+beta10"}
  "astring"
  "logs"
  "fmt"
  "cstruct" {> "2.2.0"}
  "datakit-client" {>= "0.12.0"}
  "protocol-9p-unix" {>= "0.11.0"}
  "cmdliner"
]
build: ["jbuilder" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/moby/datakit.git"
