opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: [
  "Thomas Leonard" "Magnus Skjegstad" "David Scott" "Thomas Gazagnaire"
]
license: "Apache"
homepage: "https://github.com/moby/datakit"
doc: "https://docker.github.io/datakit/"
bug-reports: "https://github.com/moby/datakit/issues"
depends: [
  "ocaml"
  "jbuilder" {build & >= "1.0+beta10"}
  "datakit-client" {>= "0.12.0"}
  "irmin-git" {>= "1.2.0"}
  "irmin-watcher"
  "git-unix"
  "alcotest" {with-test}
  "irmin-mem" {with-test}
  "irmin-git" {with-test}
]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "tests/datakit-git"] {with-test}
]
dev-repo: "git+https://github.com/moby/datakit.git"
