opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: [
  "Thomas Leonard" "Magnus Skjegstad" "David Scott" "Thomas Gazagnaire"
]
license: "Apache"
homepage: "https://github.com/moby/datakit"
doc: "https://docker.github.io/datakit/"
bug-reports: "https://github.com/moby/datakit/issues"
depends: [
  "ocaml"
  "dune" {build}
  "datakit-client" {>= "0.12.0"}
  "irmin-git" {>= "1.2.0"}
  "irmin-watcher"
  "git-unix"
  "alcotest" {with-test}
  "irmin-mem" {with-test}
  "irmin-git" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "tests/datakit-git"] {with-test}
]
dev-repo: "git+https://github.com/moby/datakit.git"
synopsis: "A library for connecting Datakit client using Git"
description: """
This library allows for creating DataKit clients that
use the Git protocol for communication.
"""
