opam-version: "1.2"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Leonard" "Magnus Skjegstad"
               "David Scott" "Thomas Gazagnaire"]
license:      "Apache"
homepage:     "https://github.com/docker/datakit"
bug-reports:  "https://github.com/docker/datakit/issues"
dev-repo:     "https://github.com/docker/datakit.git"
doc:          "https://docker.github.io/datakit/"

build: [
  "ocaml" "pkg/pkg.ml" "build" "--pinned" "%{pinned}%" "-n" "datakit-github"
]

depends: [
  "ocamlfind"  {build}
  "ocamlbuild" {build}
  "topkg"      {build}
  "cmdliner"
  "lwt" "asetmap"
  "logs" "fmt" "mtime" "asl" "win-eventlog" "hvsock"
  "hex" "nocrypto" "conduit"
  "datakit-server" {>= "0.7.0"}
  "datakit-client" {>= "0.7.0"}
  "github-hooks" {>= "0.1.1"}
  "github" {>= "2.1.0"}
]
