opam-version: "1.2"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Leonard" "Magnus Skjegstad"
               "David Scott" "Thomas Gazagnaire"]
license:      "Apache"
homepage:     "https://github.com/moby/datakit"
bug-reports:  "https://github.com/moby/datakit/issues"
dev-repo:     "https://github.com/moby/datakit.git"
doc:          "https://docker.github.io/datakit/"

build: ["jbuilder" "build" "-p" name "-j" jobs]

depends: [
  "jbuilder" {build & >= "1.0+beta10"}
  "cmdliner"
  "lwt" {>= "3.0.0"}
  "uri" {>= "1.8.0"}
  "asetmap"
  "logs"
  "fmt"
  "result"
  "datakit-client-9p"  {>= "0.12.0"}
  "datakit-client-git" {>= "0.12.0"}
]
