opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: [
  "Thomas Leonard" "Magnus Skjegstad" "David Scott" "Thomas Gazagnaire"
]
license: "Apache"
homepage: "https://github.com/moby/datakit"
doc: "https://docker.github.io/datakit/"
bug-reports: "https://github.com/moby/datakit/issues"
depends: [
  "ocaml"
  "dune" {build}
  "cmdliner"
  "lwt" {>= "3.0.0"}
  "uri" {>= "1.8.0"}
  "asetmap"
  "logs"
  "fmt"
  "result"
  "datakit-client-9p" {>= "0.12.0"}
  "datakit-client-git" {>= "0.12.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/moby/datakit.git"
synopsis: "Abstraction of the GitHub API, suitable for DataKit clients"
description: """
This library exposes the GitHub REST API over the
DataKit filesystem layer.
"""
