opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: [
  "Thomas Leonard" "Magnus Skjegstad" "David Scott" "Thomas Gazagnaire"
]
license: "Apache"
homepage: "https://github.com/moby/datakit"
doc: "https://docker.github.io/datakit/"
bug-reports: "https://github.com/moby/datakit/issues"
depends: [
  "ocaml"
  "dune" {build}
  "datakit-server" {>= "0.12.0"}
  "mirage-flow-lwt"
  "protocol-9p" {>= "0.11.0"}
  "sexplib"
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/moby/datakit.git"
synopsis: "Build Datakit servers using the 9P filesystem protocol"
description: """
This library allows for the construction of DataKit servers
that can be accessed over the 9P filesystem protocol.
"""
