opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: [
  "Thomas Leonard" "Magnus Skjegstad" "David Scott" "Thomas Gazagnaire"
]
license: "Apache"
homepage: "https://github.com/moby/datakit"
doc: "https://docker.github.io/datakit/"
bug-reports: "https://github.com/moby/datakit/issues"
depends: [
  "ocaml"
  "dune" {build}
  "astring"
  "logs"
  "rresult"
  "fmt"
  "lwt" {>= "3.0.0"}
  "cstruct" {>= "2.2.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/moby/datakit.git"
synopsis: "A library to write Datakit servers"
description: """
The library exposes a VFS interface, that servers can use to write
introspection libraries -- for instance to expose runtime parameters
over 9p. The library does not depend on Irmin so is relatively
lightweight to embed in any application.
"""
