(library
 (name      datakit_bridge_github)
 (wrapped   false)
 (modules   (:standard \ main) \ version)
 (libraries rresult github-hooks-unix github-unix datakit-github
              datakit-client))

(executable
 (name        main)
 (modules     main version)
 (package     datakit-bridge-github)
 (public_name datakit-bridge-github)
 (libraries   datakit_bridge_github datakit-client-9p protocol-9p-unix
              datakit-client-git prometheus-app.unix datakit_log fmt.cli
              fmt.tty github-unix))

(rule
 (targets version.ml)
 (action (with-stdout-to %{targets}
  (echo "let v = \"%{version:datakit-bridge-github}\""))))
