(library
 (name        datakit_ci)
 (public_name datakit-ci)
 (wrapped     false)
 (libraries   datakit-github datakit-client datakit-client-9p
              yojson cmdliner tyxml multipart-form-data
              prometheus-app.unix webmachine redis-lwt session pbkdf
              github protocol-9p-unix logs.cli session-redis-lwt
              session-webmachine github-unix fmt.cli fmt.tty uri.sexp)
 (preprocess (per_module ((pps ppx_sexp_conv) cI_secrets cI_web_utils))))
 

(rule
  (targets cI_static.ml)
  (deps    (source_tree ../static/))
  (action  (run ocaml-crunch --mode=plain -o %{targets} ../static)))
